# numpy-cython-example

./: .flake8  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  hello.pyx  numpy_cython_example.pyx  numpy_cython_sum.pyx  pyproject.toml  setup.py
.github/workflows/: build.yml  cd.yml  ci.yml  lint.yml
src/numpy_cython_example/: __init__.py  dfd.pyx  sum.pyx
tests/: test_dfd.py  test_sum.py
