[build-system]
requires = ["setuptools", "numpy", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "numpy-cython-example"
version = "0.0.0"
dependencies = [
  "numpy",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.cibuildwheel]
skip = "cp36-* cp37-* cp38-* pp* *_ppc64le *_i686 *_s390x"
