[build-system]
requires = ["setuptools", "numpy", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "numpy-cython-example"
version = "0.1.0a2"
authors = [
    {name = "Jisoo Song", email = "jeesoo9595@snu.ac.kr"}
]
description = "Example for writing Cython for Numpy and publishing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.cibuildwheel]
skip = "cp36-* cp37-* cp38-* pp* *_ppc64le *_i686 *_s390x"

test-extras = ["test"]
test-command = "pytest {package}"
