[build-system]
requires = ["setuptools", "numpy", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "numpy-cython-example"
version = "1.0.0"
authors = [
    {name = "Jisoo Song", email = "jeesoo9595@snu.ac.kr"}
]
description = "Example for writing Cython for Numpy and publishing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
]

[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "flake8",
    "black",
    "isort",
    "numpy-cython-example[test]",
]

[tool.cibuildwheel]
# scipy skips these wheels
skip = "cp36-* cp37-* cp38-* pp* *_ppc64le *_i686 *_s390x"
test-extras = ["test"]
test-command = "pytest {package}"
